--- a/001.HTML 학습/01.Info_PJ/index.html
+++ b/001.HTML 학습/01.Info_PJ/index.html
@@ -3,6 +3,11 @@
     <head>
         <title>네이버 요약뉴스</title>
         <meta charset="utf-8">
+        <!-- 
+            style 요소
+            - css 코딩구역
+            - 이런코딩방식을 인터널(internal)방식
+         -->
         <style>
             /* 스타일시트를 사용하는 영역 */
             /* css문법만 쓸수있음 */
@@ -102,16 +107,16 @@
             <!-- 1-2.메뉴 -->
             <nav>
                 <!-- 로고 -->
-                <a href="#">
+                <a href="index.html">
                     <img src="./images/naver.png" alt="네이버로고" style="width: 20px;">
                 </a>
-                <a href="#">정치</a>
-                <a href="#">경제</a>
-                <a href="#">사회</a>
-                <a href="#">IT/과학</a>
-                <a href="#">IV/연애</a>
-                <a href="#">정치</a>
-                <a href="#">정치</a>
+                <a href="sub1.html">정치</a>
+                <a href="sub2.html">경제</a>
+                <a href="sub3.html">사회</a>
+                <a href="sub4.html">IT/과학</a>
+                <a href="sub5.html">IV/연애</a>
+                <a href="sub6.html">정치</a>
+                <a href="sub7.html">정치</a>
             </nav>
             <!-- nav요소:네비게이션을 넣는 블록박스요소
             (navigation에서 나온말) -->
