--- a/001.HTML 학습/01.Info_PJ/sub3.html
+++ b/001.HTML 학습/01.Info_PJ/sub3.html
@@ -1,54 +1,60 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>네이버 요약뉴스 - 사회</title>
-        <meta charset="utf-8">
-        <!-- 
+
+<head>
+    <title>네이버 요약뉴스 - 사회</title>
+    <meta charset="utf-8">
+    <!-- 
             link 요소
             - 외부css 불러오기
             - 이런코딩방식을 익스터널(exinternal)방식
             - rel="stylesheet" 불러올 형식지정(relevant:관련있는)
             - href="경로" 불러올 파일이 있는곳 지정(hyper text reference참조)
          -->
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <!-- 1상단영역 -->
-        <header>
-            <!-- 1-1제목 -->
-            <h1>네이버 요약뉴스 - 사회</h1>
-            <!-- 1-2.메뉴 -->
-            <nav>
-                <!-- 로고 -->
-                <a href="index.html">
-                    <img src="./images/naver.png" alt="네이버로고" style="width: 20px;">
-                </a>
-                <a href="sub1.html">정치</a>
-                <a href="sub2.html">경제</a>
-                <a href="sub3.html">사회</a>
-                <a href="sub4.html">IT/과학</a>
-                <a href="sub5.html">IV/연애</a>
-                <a href="sub6.html">정치</a>
-                <a href="sub7.html">정치</a>
-            </nav>
-            <!-- nav요소:네비게이션을 넣는 블록박스요소
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+    <!-- 1상단영역 -->
+    <header>
+        <!-- 1-1제목 -->
+        <h1>네이버 요약뉴스 - 사회</h1>
+        <!-- 1-2.메뉴 -->
+        <nav>
+            <!-- 로고 -->
+            <a href="index.html">
+                <img src="./images/naver.png" alt="네이버로고" style="width: 20px;">
+            </a>
+            <a href="sub1.html">정치</a>
+            <a href="sub2.html">경제</a>
+            <a href="sub3.html">사회</a>
+            <a href="sub4.html">IT/과학</a>
+            <a href="sub5.html">IV/연애</a>
+            <a href="sub6.html">정치</a>
+            <a href="sub7.html">정치</a>
+        </nav>
+        <!-- nav요소:네비게이션을 넣는 블록박스요소
             (navigation에서 나온말) -->
-        </header>
-        <!-- div요소:컨텐츠를 구분해주는 블록박스요소
+    </header>
+    <!-- div요소:컨텐츠를 구분해주는 블록박스요소
         (divide, division에서 온말) -->
-        <!-- 2.메인영역 -->
-        <main></main>
-        <!-- 3.하단영역 -->
-        <footer>
-            <address>
-                서울시 강남구 역삼동 119 대호빌딩 8층 <br>
-                대표:cgh <br>
-                전화번호:010-2222-3333
-            </address>
-            <!-- address요소:주소를 담는 박스요소
+    <!-- 2.메인영역 -->
+    <main>
+        <!-- 2-1.제목 -->
+        <!-- 2-2.기사이미지 -->
+        <!-- 2-3.기사내용 -->
+    </main>
+    <!-- 3.하단영역 -->
+    <footer>
+        <address>
+            서울시 강남구 역삼동 119 대호빌딩 8층 <br>
+            대표:cgh <br>
+            전화번호:010-2222-3333
+        </address>
+        <!-- address요소:주소를 담는 박스요소
             의미있는 태그 ->시멘틱! -->
-        </footer>
-        <!-- 
+    </footer>
+    <!-- 
             [html 핵심 요소들 - 페이지에 단 한번만 나옴]
             1.html : 최상위 부모(root)
             2.head : 기본정보영역
@@ -66,5 +72,6 @@
             div를 구체적인 내용으로 변경한 형제들이다!
             (유의미하다 해서 시멘틱요소라고 함!) semantic
          -->
-    </body>
+</body>
+
 </html>
