--- a/001.HTML 학습/01.Info_PJ/sub1.html
+++ b/001.HTML 학습/01.Info_PJ/sub1.html
@@ -29,7 +29,7 @@
             <a href="sub2.html">경제</a>
             <a href="sub3.html">사회</a>
             <a href="sub4.html">IT/과학</a>
-            <a href="sub5.html">IV/연애</a>
+            <a href="sub5.html">TV/연애</a>
             <a href="sub6.html">정치</a>
             <a href="sub7.html">정치</a>
         </nav>
