--- a/001.HTML 학습/01.Info_PJ/sub4.html
+++ b/001.HTML 학습/01.Info_PJ/sub4.html
@@ -29,7 +29,7 @@
             <a href="sub2.html">경제</a>
             <a href="sub3.html">사회</a>
             <a href="sub4.html">IT/과학</a>
-            <a href="sub5.html">IV/연애</a>
+            <a href="sub5.html">TV/연애</a>
             <a href="sub6.html">정치</a>
             <a href="sub7.html">정치</a>
         </nav>
@@ -40,9 +40,30 @@
         (divide, division에서 온말) -->
     <!-- 2.메인영역 -->
     <main>
+        <!-- 언론사로고 -->
+        <img src="images/apt4.png" alt="newsis">
         <!-- 2-1.제목 -->
+        <h2>새해부터 휴대폰 할부금 상환방식, 요금청구서로 확인</h2>
         <!-- 2-2.기사이미지 -->
+        <figure>
+            <img src="images/at4.jpg" alt="IT/과학">
+            <figcaption>사진 = 이미지투데이</figcaption>
+        </figure>
         <!-- 2-3.기사내용 -->
+        <p>새해부터 휴대폰 할부금 상환 방식을 통신 가입 신청서와 요금 청구서에서 확인할 수 있게 된다.</p>
+
+        <p>방송통신위원회는 이동통신 3사와 협의해 가입신청서와 요금청구서에 단말기 할부금과 할부수수료를 매월 균등하게 분할해 상환하는 방식으로 청구된다는 점을 명확하게 고지하도록 개선했다고 30일 밝혔다.</p>
+
+        <p>현행 가입신청서, 요금청구서 등에는 단말기 할부금 상환방식이 기재되어 있지 않고, 불명확해 이용자가 할부금 상환방식을 명확하게 알 수 있도록 개선해달라는 국민신문고 민원요청에 따라 이뤄졌다.</p>
+
+        <p>방통위는 제도개선과 함께 이용자들이 단말기 할부금과 할부수수료에 대한 상환방법을 충분히 안내받을 수 있도록 이동통신 3사와 유통점에 협조해줄 것을 권고했다.</p>
+
+        <p>한상혁 위원장은 “앞으로도 이용자가 단말기를 이용하는데 있어 조그만 불편사항도 해소될 수 있도록 국민의 소리에 귀를 기울이겠다”고 말했다.</p>
+
+        <span>박수형 기자(psooh@zdnet.co.kr)</span>
+
+        <a href="https://news.naver.com/main/read.naver?mode=LSD&mid=shm&sid1=105&oid=092&aid=0002243648">원본기사</a>
+
     </main>
     <!-- 3.하단영역 -->
     <footer>
