--- a/001.HTML 학습/01.Info_PJ/sub3.html
+++ b/001.HTML 학습/01.Info_PJ/sub3.html
@@ -29,7 +29,7 @@
             <a href="sub2.html">경제</a>
             <a href="sub3.html">사회</a>
             <a href="sub4.html">IT/과학</a>
-            <a href="sub5.html">IV/연애</a>
+            <a href="sub5.html">TV/연애</a>
             <a href="sub6.html">정치</a>
             <a href="sub7.html">정치</a>
         </nav>
@@ -40,9 +40,42 @@
         (divide, division에서 온말) -->
     <!-- 2.메인영역 -->
     <main>
+        <!-- 언론사로고 -->
+        <img src="images/apt3.png" alt="newsis">
         <!-- 2-1.제목 -->
+        <h2>음식 엎었다고 알바에 800만원 받은 손님…보험 됐는데 안 돌려줘</h2>
+
         <!-- 2-2.기사이미지 -->
+        <figure>
+            <img src="images/at3.jpg" alt="사회이미지">
+            <figcaption>/출처=보배드림 캡처</figcaption>
+        </figure>
         <!-- 2-3.기사내용 -->
+        <p>주말에 웨딩홀에서 일하다 실수로 손님에게 음식을 엎질러 800만원을 날리게 된 아르바이트 직원의 사연이 온라인 커뮤니티에 올라왔다.</p>
+
+        <p>30일 온라인 커뮤니티 보배드림에 '웨딩홀 단기 알바 갔다가 800만원 잃었습니다'라는 제목의 글이 올라왔다. 아르바이트 직원의 형제라고 밝힌 작성자 A씨는 "몇주 전 주말 동생이 웨딩홀 단기 알바를</p>
+        하다가 손님께 음식을 엎었다"고 했다.
+
+        <p>그는 "당시 일하고 있던 와중에 손님이 손목을 잡고 중고 명품점을 가서 진품 여부와 세탁비가 어느정도 나올 것 같다는 견적을 받아 1000만원을 요구했다"며 "동생이 그 자리에서 무릎 꿇고 빌어서</p>
+        800만원으로 합의를 봤다"고 했다.
+
+        <p>그러면서 "웨딩홀 측에서는 근무지 이탈로 당일 일당도 안 주었고, 손님과도 알아서 합의 보라는 식의 입장이었다"며 "동생은 800만원을 겨우 마련해 손님께 드렸다"고 했다.</p>
+
+        <p>이후 A씨는 웨딩업체 측에서 보험 처리가 가능하다는 사실을 알게 됐다. A씨는 "보험처리가 가능하다는 걸 알게 되어 손님께 보험 처리가 가능하니 800만원을 돌려주고 보험 처리를 해달라고 했고 손님도</p>
+        동의했다"고 했다.
+
+        <p>그러나 약속은 지켜지지 않았다. 보험 처리하기로 합의한 이후 피해 손님은 차일피일 미루며 800만원을 돌려주지 않았다. A씨는 "지난 28일 웨딩홀 측에 보험 접수까지 된 걸 확인했지만 아직까지 준다는</p>
+        말만하고 약속한 시간이 되면 연락이 안 되거나 미뤘다"고 주장했다.
+
+        <p>그는 "이제는 카카오톡도 씹고 전화도 안 받고 있다"며 "손님이 웨딩홀 측과 저희에게 이중으로 돈을 받으려는 것 아닌가라는 생각도 든다"고 했다.</p>
+
+        <p>A씨는 "저와 동생은 그날 이후 생활비도 없어 밥도 잘 못 먹고 잠도 못자고 불면증에 시달리고 있다"며 "협박 아닌 협박으로 800만원 뜯어간 손님도, 단기 알바라고 근로계약서도 안 쓰고 보험도
+        있으면서 안 해준 웨딩업체도 원망스럽다"고 토로했다.</p>
+
+        <span>김태현 기자 (thkim124@mt.co.kr)</span>
+
+        <a href="https://news.naver.com/main/read.naver?mode=LSD&mid=shm&sid1=102&oid=008&aid=0004689900">원본기사</a>
+
     </main>
     <!-- 3.하단영역 -->
     <footer>
