--- a/001.HTML 학습/01.Info_PJ/sub3.html
+++ b/001.HTML 학습/01.Info_PJ/sub3.html
@@ -61,8 +61,8 @@
 
         <p>그러면서 "웨딩홀 측에서는 근무지 이탈로 당일 일당도 안 주었고, 손님과도 알아서 합의 보라는 식의 입장이었다"며 "동생은 800만원을 겨우 마련해 손님께 드렸다"고 했다.</p>
 
-        <p>이후 A씨는 웨딩업체 측에서 보험 처리가 가능하다는 사실을 알게 됐다. A씨는 "보험처리가 가능하다는 걸 알게 되어 손님께 보험 처리가 가능하니 800만원을 돌려주고 보험 처리를 해달라고 했고 손님도</p>
-        동의했다"고 했다.
+        <p>이후 A씨는 웨딩업체 측에서 보험 처리가 가능하다는 사실을 알게 됐다. A씨는 "보험처리가 가능하다는 걸 알게 되어 손님께 보험 처리가 가능하니 800만원을 돌려주고 보험 처리를 해달라고 했고 손님도
+        동의했다"고 했다.</p>
 
         <p>그러나 약속은 지켜지지 않았다. 보험 처리하기로 합의한 이후 피해 손님은 차일피일 미루며 800만원을 돌려주지 않았다. A씨는 "지난 28일 웨딩홀 측에 보험 접수까지 된 걸 확인했지만 아직까지 준다는</p>
         말만하고 약속한 시간이 되면 연락이 안 되거나 미뤘다"고 주장했다.
