--- a/001.HTML 학습/01.Info_PJ/sub2.html
+++ b/001.HTML 학습/01.Info_PJ/sub2.html
@@ -59,8 +59,8 @@
 
         <p>삼성전자는 중국 시안에서 3차원 낸드플래시 1·2공장을 운영 중이다. 이들 공장의 생산능력은 삼성전자 낸드플래시의 42.5%, 세계 전체 생산량의 15.3%를 차지한다.</p>
 
-        <p>대만 시장조사기관 트렌드포스는 시안 정부가 도시를 봉쇄하는 동안 사람과 물품 이동을 매우 엄격하게 제한할 수 있다고 분석했다. 또 삼성전자 고객들은 인도 지연으로 메모리 부품 수급에 차질을 겪을 수</p>
-        있다고 지적했다.
+        <p>대만 시장조사기관 트렌드포스는 시안 정부가 도시를 봉쇄하는 동안 사람과 물품 이동을 매우 엄격하게 제한할 수 있다고 분석했다. 또 삼성전자 고객들은 인도 지연으로 메모리 부품 수급에 차질을 겪을 수
+        있다고 지적했다.</p>
 
         <p>인구 1300만 도시 중국 시안은 코로나19 확산을 이유로 지난 23일부터 봉쇄 조치에 들어갔다. 중국은 코로나19 확진자가 0명이 나올 때까지 해당 지역을 고강도로 방역하는 ‘제로 코로나’ 정책을</p>
         <p>펴고 있다. 도시가 봉쇄되면 코로나19에 대응하거나 생활필수품을 나르는 자동차만 돌아다닐 수 있다. 나머지 기업과 시민은 운전할 수 없다.</p>
