--- a/001.HTML 학습/01.Info_PJ/index.html
+++ b/001.HTML 학습/01.Info_PJ/index.html
@@ -181,6 +181,41 @@
     -->
     <!-- 원본링크
     https://www.w3schools.com/html/html_formatting.asp -->
+
+    <!-- 
+        <blockquote>	Defines a section that is quoted from another source 
+            (인용블록표시요소
+            -cite 속성으로 출처표시
+            -블록요소이므로 p태그 안에 쓰지 않게 조심하자
+            -
+            )
+        <q>	Defines a short inline quotation 
+            간당한 인용구표시(quotation)
+        <abbr>	Defines an abbreviation or acronym 줄임말 원래뜻 보여주는 요소
+            (abbreviation)
+            -title 특징요소
+        <address> Defines contact information for the author/owner of a document
+            주소정보를 표시하는 요쇼(+소유자정보)
+        <bdo>	Defines the text direction
+            글자진행방향 설정요소(dir="rtl" 오른쪽부터진행함)
+            ->rtl은 right to left 오른쪽에서 왼쪽방향으로 라는 뜻
+            ->아랍어 등 반대방향으로 글쓰는 문자 출력시사용!
+            ->글자방향에 대한 css는 별도로 있음!
+        <cite>	Defines the title of a work
+            인용구표시(작품명 등)
+
+        (원본링크)
+        https://www.w3schools.com/html/html_quotation_elements.asp 
+
+        [그룹요서]
+        1.ul요소:순서없는 리스트(unordered list)
+        - li 하위요소 필수!
+        -기본 표시자는 원형블릿(옵션있음)
+
+        2.ol요소:순서없는 리스트(ordered list)
+        - li 하위요소 필수!
+        -기본 표시자는 숫자(옵션있음)
+    -->
 </body>
 
 </html>
