--- a/001.HTML 학습/01.Info_PJ/sub3.html
+++ b/001.HTML 학습/01.Info_PJ/sub3.html
@@ -48,13 +48,15 @@
         <!-- 2-2.기사이미지 -->
         <figure>
             <img src="images/at3.jpg" alt="사회이미지">
-            <figcaption><small>/출처=보배드림 캡처</small></figcaption>
+            <figcaption><s>/출처=보배드림 캡처</s></figcaption>
         </figure>
         <!-- 2-3.기사내용 -->
         <p><strong>주말에 웨딩홀에서 일하다 실수로 손님에게 음식을 엎질러</strong> <mark>800만원을 날리게 된 아르바이트 직원의 사연</mark>이 온라인 커뮤니티에 올라왔다.</p>
 
-        <p>30일 온라인 커뮤니티 보배드림에 <b>'웨딩홀 단기 알바 갔다가 800만원 잃었습니다'</b>라는 제목의 글이 올라왔다. 아르바이트 직원의 형제라고 밝힌 작성자 A씨는 "몇주 전 주말 동생이 웨딩홀 단기
-            알바를 하다가 손님께 음식을 엎었다"고 했다.</p>
+        <p>30일 온라인 커뮤니티 보배드림에 <b>'웨딩홀 단기 알바 갔다가 800만원 잃었습니다'</b>라는 제목의 글이 올라왔다. 아르바이트 직원의 형제라고 밝힌 작성자 A씨는 <q>
+            몇주 전 주말 동생이 웨딩홀 단기
+                알바를 하다가 손님께 음식을 엎었다
+        </q>고 했다.</p>
 
         <p>그는 "당시 일하고 있던 와중에 손님이 손목을 잡고 중고 명품점을 가서 진품 여부와 세탁비가 어느정도 나올 것 같다는 견적을 받아 1000만원을 요구했다"며 "동생이 그 자리에서 무릎 꿇고 빌어서
             800만원으로 합의를 봤다"고 했다.</p>
@@ -69,7 +71,7 @@
                 준다는 말만하고 약속한 시간이 되면 연락이 안 되거나 미뤘다
         </i>"고 주장했다.</p>
 
-        <p>그는 <em>"이제는 카카오톡도 <del>씹고</del> 전화도 안 받고 있다"며 "손님이 웨딩홀 측과 저희에게 이중으로 돈을 받으려는 것 아닌가라는 생각도 든다"</em>고 했다.</p>
+        <p>그는 <em>"이제는 카카오톡도 씹고 전화도 안 받고 있다"며 "손님이 웨딩홀 측과 저희에게 이중으로 돈을 받으려는 것 아닌가라는 생각도 든다"</em>고 했다.</p>
 
         <p>A씨는 "저와 동생은 그날 이후 생활비도 없어 밥도 잘 못 먹고 잠도 못자고 불면증에 시달리고 있다"며 "협박 아닌 협박으로 800만원 뜯어간 손님도, 단기 알바라고 근로계약서도 안 쓰고 보험도
             있으면서 안 해준 웨딩업체도 원망스럽다"고 토로했다.</p>
@@ -77,6 +79,10 @@
         <span>김태현 기자 (thkim124@mt.co.kr)</span>
 
         <a href="https://news.naver.com/main/read.naver?mode=LSD&mid=shm&sid1=102&oid=008&aid=0004689900">원본기사</a>
+
+
+
+
 
     </main>
     <!-- 3.하단영역 -->
