--- a/001.HTML 학습/01.Info_PJ/sub2.html
+++ b/001.HTML 학습/01.Info_PJ/sub2.html
@@ -70,6 +70,82 @@
         <p>이재용 삼성전자 부회장(왼쪽)이 지난해 5월 중국 시안 반도체 공장을 방문해 <ins>혼자</ins> 현장을 점검하고 있다.(사진=삼성전자=뉴시스)</p>
         
         <span>유혜진 기자(langchemist@zdnet.co.kr)</span>
+
+        <hr>
+
+        <h3>경제속보</h3>
+        <ul>
+            <li>
+                <a href="https://news.naver.com/main/read.naver?mode=LSD&mid=sec&sid1=101&oid=119&aid=0002562545" target="_blank">
+                    여기어때, 상위 1% 숙소 발표…수상 숙소 할인 기획전
+                </a>
+            </li>
+            <li>
+                <a href="https://news.naver.com/main/read.naver?mode=LSD&mid=sec&sid1=101&oid=382&aid=0000953798" target="_blank">
+                    무신사, 서울 성동구 선별진료소에 핫팩 기부   
+                </a>
+            </li>
+            <li>
+                <a href="https://news.naver.com/main/read.naver?mode=LSD&mid=sec&sid1=101&oid=092&aid=0002243674" target="_blank">
+                    삼성전자, 코로나 탓 중국 생산 차질…SK하이닉스는? 
+                </a>
+            </li>
+        </ul>
+
+        <hr>
+
+        <h3>랭킹뉴스</h3>
+        <ol>
+            <li>
+                <a href="https://news.naver.com/main/ranking/read.naver?mode=LSD&mid=shm&sid1=001&oid=092&aid=0002243809&rankingType=RANKING" target="_blank">
+                    올해 기대되는 애플 신제품, 어떤 것이 있나
+                </a>
+            </li>
+            <li>
+                <a href="https://news.naver.com/main/ranking/read.naver?mode=LSD&mid=shm&sid1=001&oid=092&aid=0002243838&rankingType=RANKING" target="_blank">
+                    3N 넥슨-넷마블-엔씨, 새해 신작 라인업 살펴보니
+                </a>
+            </li>
+            <li>
+                <a href="https://news.naver.com/main/ranking/read.naver?mode=LSD&mid=shm&sid1=001&oid=092&aid=0002243884&rankingType=RANKING" target="_blank">
+                    1월, 르노 마스터 15인승 버스 사면 최대 385만원 할 …
+                </a>
+            </li>
+        </ol>
+
+        <hr>
+
+        <dl>
+            <dt>경제</dt>
+            <dd>
+                <a href="https://news.naver.com/main/read.naver?mode=LS2D&mid=shm&sid1=101&sid2=258&oid=277&aid=0005025085" target="_blank">
+                    에스디바이오센서, 캐다나에 1387억원 규모 코로나 진단키트 공급
+                </a>
+            </dd>
+            <dd>
+                <a href="https://news.naver.com/main/read.naver?mode=LS2D&mid=shm&sid1=101&sid2=258&oid=015&aid=0004648431" target="_blank">
+                    증시 개장일부터 게임주 상승세
+                </a>
+            </dd>
+            <dt>사회</dt>
+            <dd>
+                <a href="https://news.naver.com/main/read.naver?mode=LS2D&mid=shm&sid1=102&sid2=252&oid=032&aid=0003120228" target="_blank">
+                    188일 걸리던 풍력 환경평가가 '41일'... 풍력 발전 가속화
+                </a>
+            </dd>
+            <dd>
+                <a href="https://news.naver.com/main/read.naver?mode=LS2D&mid=shm&sid1=102&sid2=252&oid=001&aid=0012894848" target="_blank">
+                    순창군 농경지·농업용수, 중금속과 수질 기준에 '적합'
+                </a>
+            </dd>
+            <dt>생활/문화</dt>
+            <dd>
+                <a href="" target="_blank"></a>
+            </dd>
+            <dd>
+                <a href="" target="_blank"></a>
+            </dd>
+        </dl>
         <a href="https://news.naver.com/main/read.naver?mode=LSD&mid=shm&sid1=101&oid=092&aid=0002243674">원본기사</a>
     </main>
     <!-- 3.하단영역 -->
