--- a/001.HTML 학습/01.Info_PJ/sub2.html
+++ b/001.HTML 학습/01.Info_PJ/sub2.html
@@ -16,11 +16,11 @@
 
 <body>
     <!-- 1상단영역 -->
-    <header>
+    <header id="top">
         <!-- 1-1제목 --> 
         <h1>네이버 요약뉴스 - 경제</h1>
         <!-- 1-2.메뉴 -->
-        <nav>
+        <nav class="gnb">
             <!-- 로고 -->
             <a href="index.html">
                 <img src="./images/naver.png" alt="네이버로고" style="width: 20px;">
@@ -39,7 +39,7 @@
     <!-- div요소:컨텐츠를 구분해주는 블록박스요소
         (divide, division에서 온말) -->
     <!-- 2.메인영역 -->
-    <main>
+    <main id="cont">
         <!-- 언론사로고 -->
         <img src="images/atp2.png" alt="newsis">
         <!-- 2-1.제목 -->
@@ -149,7 +149,7 @@
         <a href="https://news.naver.com/main/read.naver?mode=LSD&mid=shm&sid1=101&oid=092&aid=0002243674">원본기사</a>
     </main>
     <!-- 3.하단영역 -->
-    <footer>
+    <footer id="info">
         <address>
             서울시 강남구 역삼동 119 대호빌딩 8층 <br>
             대표:cgh <br>
