드라마코딩

--- a/001.HTML 학습/01.Info_PJ/sub5.html
+++ b/001.HTML 학습/01.Info_PJ/sub5.html
@@ -52,17 +52,17 @@
         <!-- 2-3.기사내용 -->
         <p>JTBC 수목드라마 '공작도시'(극본 손세동 연출 전창근) 30일 방송에서는 끊어질 듯 끊어지지 않는 윤재희(수애)와 유진석(동방우)의 악연이 점점 극한으로 치닫는다.</p>
 
-        윤재희와 유진석의 악연은 10년 전부터 이어져 왔다. 윤재희가 비엔날레 의전을 담당했던 시절, 문체부 장관이던 유진석이 그녀에게 신진작가 기획전 총감독 자리를 위한 접대를 강요하면서 악연이 시작됐다.
-        <p>10년 후, 윤재희가 아트스페이스 진 전시 해설자를 유진석이 아닌 김이설(이이담)로 교체하면서 통쾌한 복수가 마무리되는 듯 보였다.</p>
+        <p>윤재희와 유진석의 악연은 10년 전부터 이어져 왔다. 윤재희가 비엔날레 의전을 담당했던 시절, 문체부 장관이던 유진석이 그녀에게 신진작가 기획전 총감독 자리를 위한 접대를 강요하면서 악연이 시작됐다.
+        10년 후, 윤재희가 아트스페이스 진 전시 해설자를 유진석이 아닌 김이설(이이담)로 교체하면서 통쾌한 복수가 마무리되는 듯 보였다.</p>
 
-        <p>그러나 한 번 시작된 악연은 지겹게 윤재희를 따라다니며 다시 한번 그녀를 곤경에 빠뜨릴 예정이다. 공개된 사진 속 윤재희는 유진석 앞에서 불편한 심기를 그대로 드러내고 있어 그를 향한 윤재희의 적대적인</p>
-        감정을 엿볼 수 있다.
+        <p>그러나 한 번 시작된 악연은 지겹게 윤재희를 따라다니며 다시 한번 그녀를 곤경에 빠뜨릴 예정이다. 공개된 사진 속 윤재희는 유진석 앞에서 불편한 심기를 그대로 드러내고 있어 그를 향한 윤재희의 적대적인
+        감정을 엿볼 수 있다.</p>
 
-        <p>한편 윤재희는 '기억하겠습니다. 2014 형산동 그날' 피켓을 든 사람들의 시위가 한창인 길 한복판에서 충격에 빠진 모습으로 서 있어 눈길을 끈다. 형산 참사 진실 규명 시위 장소에 그녀가 간 이유에</p>
-        관심이 쏠리는 가운데, 보도국 기자 한동민(이학주)의 등장도 눈여겨볼 대목이라고.
+        <p>한편 윤재희는 '기억하겠습니다. 2014 형산동 그날' 피켓을 든 사람들의 시위가 한창인 길 한복판에서 충격에 빠진 모습으로 서 있어 눈길을 끈다. 형산 참사 진실 규명 시위 장소에 그녀가 간 이유에
+        관심이 쏠리는 가운데, 보도국 기자 한동민(이학주)의 등장도 눈여겨볼 대목이라고.</p>
 
-        <p>과연 윤재희를 꼼짝달싹 못하게 만든 유진석의 저열한 계략은 무엇일지, 지금껏 불리한 상황도 결국엔 유리하게 만들었던 윤재희가 어떤 리액션을 취할 것인지, 성공에 걸림돌이 될 유진석과의 악연을 이번에는</p>
-        끊을 수 있을지 궁금증을 남기며 30일 방송을 기대케 하고 있다.
+        <p>과연 윤재희를 꼼짝달싹 못하게 만든 유진석의 저열한 계략은 무엇일지, 지금껏 불리한 상황도 결국엔 유리하게 만들었던 윤재희가 어떤 리액션을 취할 것인지, 성공에 걸림돌이 될 유진석과의 악연을 이번에는
+        끊을 수 있을지 궁금증을 남기며 30일 방송을 기대케 하고 있다.</p>
 
         <p>30일 밤 10시 30분 방송.</p>
 
