--- a/02.Drama_PJ/drama2.html
+++ b/02.Drama_PJ/drama2.html
@@ -12,8 +12,8 @@
     <h1 class="tit">최신드라마 - 수목드라마</h1>
     <!-- 2.메뉴 -->
     <h2 class="menu">
-        <a href="drama1.html" class="on">월화드라마</a>
-        <a href="drama2.html">수목드라마</a>
+        <a href="drama1.html" >월화드라마</a>
+        <a href="drama2.html" class="on">수목드라마</a>
     </h2>
     <div class="drama">
         <table id="drama">
