--- a/002.CSS학습/002.블록과인라인.html
+++ b/002.CSS학습/002.블록과인라인.html
@@ -9,7 +9,93 @@
             text-align: center;
             border: 5px dotted orange;
         }
+/* 모든 인라인, 블록요소에 대자인 적용하기 */
+/* 별(*)은 모든요소를 선택 */
+.ele *{
+    width: 200px;
+    height: 150px;
+    border: 10px solid blue;
+    margin: 20px;
+    padding: 20px;
+}
+/* htlm 요소 박스모델의 필수속성 5가지!
+->width,height,bodermmargin,padding */
+    
+/************************************************************************* 
+    [css의 display 속성이란?]
+    -요소의 배치를 위한 표현방법
+    -요소의 display는 크게 2가지
 
+    1.block 요서
+    (1) 표현번:
+        display:block인 요소들
+    (2) 기본적으로 block인 요소들    
+        h1_h6, div, p, figure, header, nav,.....
+    (3) 특징
+    1) 옆에 다른요소가 올수 없다!(블로킹!)
+    2) 내용을 구분하는 박스다!
+    3)박스모델 디자인속성이 모두 적용된다!
+    :width, height, border, margin, psdding
+    4)위아래 간 블록요소 마진은 중첩된다
+    ->큰 마진값이 작은 마진값을 포함함
+    5)가로크기를 지정하지 않으면 부모박스 끝까지감!
+    ->width:auto; -패딩,보더포함!(안커짐)
+    6)세로크기를 지정하지 않으면 내용만큼 늘어남!
+    ->height:auto;
+    7)박스의 지정된 크기는 패당과 보더를 줄경우
+    그 지정된 크기에 패딩과 보더 크기 만큼 늘어남!
+    ->이런박스를 컨텐트박스라고 함!
+    [보더와 패딩을 박스크기에 포함할지 말지에 대한
+    옵션을 변경하는 속성은?>>>box-sizing]
+    1)box-sizing:border-box
+    ->패딩과 보더를 사이즈 안쪽 포함하여 크기가 안늘어남!
+    2)box-sizing:content-box(기본값)
+    ->패딩과 보더에 따라 박스가 커짐!
+    --------------------------------------------
+    2.inline요소
+    (1) 표현법:
+    display:inline;
+    (2)기본적으로 inline 인 요소들
+    a, img, span, b, i, em, strong,......
+    (3)특징:
+    1)block요소를 포함할 수 없다!
+    2)width, height 크기 지정안됨!(내용만큼 늘어남)
+    3)margin은 야쪽만 적용됨!
+    ->위아래 마진은 줘도 안먹음!
+    4)->padding은 적용은 되나 다른 인라인요소와 줄바꿈시
+    영향을 주지 않는다!(위아래패딩)
+    5)인라인 요소의 위아래 간격은 line-height로 처리함!
+
+    [예외 인라인요소->img]
+    ->이미지는 인라인요소지만
+    width,height,margin,padding이 모두 족용된다!
+    (그러나 위아래 마진은 다른 인라인요소에 영향주지 못함!)
+
+    [원래 display 출신을 바꿀 수 있나?]
+    -> 변경가능!
+    block과 inline등 다른 것으로 변경할 수있다.
+    ->단, 원래출신이 중요하므로 span을 block으로
+    변경했다고 해서 div 처럼 다른 블록요서를 포함하는
+    코딩을 하지 않길 바란다.
+    -----------------------------------------------
+    3.inline-block요소
+    (1)펴현법:
+    display:inline-block
+    (2)기본적으로 inline-block인 요소들
+    button, input등
+    (3)특징:
+    1)인라인처럼 한줄에 온다!
+    2)인라인처럼 위아래 마진은 적용되지 않는다!
+    3)블록처럼 디자인이 적용된다!
+    -width,height
+    4)블록처럼 지정된 크기에 패딩과 보더를 줄경우 내부에 포함된다!
+    (기본설정 -> box-sizing:border-box)
+
+    ---------------------------------------------------
+
+    [어떤 display든지 안보이게 하는 방법은?]
+    display:none;
+*************************************************************************/
        
 
 
