--- a/002.CSS학습/004.가상클래스.html
+++ b/002.CSS학습/004.가상클래스.html
@@ -80,12 +80,12 @@
         /* a요소 가상클래스 주기 */
 
         /* :link 링크최초상태 */
-        h2 a:link{
+        /* h2 a:link{
             color: red;
             text-decoration: none;
             text-shadow: 2 2 2 #777;
 
-        }
+        } */
 
         /* 일반적으로 a요소 자체 디자인을 잡는다! */
         h2 a {
