--- a/03.DKB_PJ/index.html
+++ b/03.DKB_PJ/index.html
@@ -24,7 +24,7 @@
                     </span>
                 </div>
                 <!-- 케릭터설명박스 -->
-                <div class="cd">
+                <div class="cd scbar">
                     <!-- 캐릭터 타이틀 -->
                     <h3>도깨비(김신), 939세</h3>
                     <!-- 캐릭터 설명 -->
@@ -44,7 +44,7 @@
                     </span>
                 </div>
                 <!-- 케릭터설명박스 -->
-                <div class="cd">
+                <div class="cd scbar">
                     <!-- 캐릭터 타이틀 -->
                     <h3>지은탁, 19세</h3>
                     <!-- 캐릭터 설명 -->
@@ -64,7 +64,7 @@
                     </span>
                 </div>
                 <!-- 케릭터설명박스 -->
-                <div class="cd">
+                <div class="cd scbar">
                     <!-- 캐릭터 타이틀 -->
                     <h3>저승사자, 30대 후반 추정</h3>
                     <!-- 캐릭터 설명 -->
@@ -86,7 +86,7 @@
                     </span>
                 </div>
                 <!-- 케릭터설명박스 -->
-                <div class="cd">
+                <div class="cd scbar">
                     <!-- 캐릭터 타이틀 -->
                     <h3>써니, 20대 중후반
                     </h3>
@@ -96,7 +96,7 @@
                     <p>그 남자, 저승사자를 처음 만난 건 갖고 싶은 반지를 발견했을 때였다. 그는 그녀에게 양보하지 않은 최초의 남자였다. 첫눈에 반했다고 넘겨짚기엔 너무, 슬픈 눈이었다. 시계며 차림새만 대충 훑어도 연봉 1억에 딱 봐도 연애 못해본 모태솔로인 줄만 알았는데, 만날수록 이상한 남자다. 두문불출하기 일쑤고 직업, 나이, 과거사 그 무엇도 알려주지 않는다. 처음엔 그저 잘생긴 호구로 생각했는데, 그 슬펐던 눈이 자꾸 눈에 밟힌다. 동정은 특기가 아닌데도.</p>
                 </div>
             </div>
-            <div style="clear: both;"></div>
+            <!-- <div style="clear: both;"></div> -->
         </div>
     </main>
     <!-- 3.하단영역 -->
