도깨비 7일수업 코딩수정 완료

--- a/03.DKB_PJ/index.html
+++ b/03.DKB_PJ/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body>
+<body class="scbar">
     <!-- 1.상단영역 -->
     <header class="top">
         <!-- 로고 -->
@@ -72,7 +72,7 @@
                 <!-- 캐릭터 이미지박스 -->
                 <div class="ci">
                     <!-- 캐릭터이미지 -->
-                    <img src="./images/dc2.png" alt="공유">
+                    <img src="./images/dc2.png" alt="김고은">
                     <span>
                         <img src="./images/d02.png" alt="진한이름">
                         <img src="./images/d022.png" alt="흐린이름">
@@ -96,7 +96,7 @@
                 <!-- 캐릭터 이미지박스 -->
                 <div class="ci">
                     <!-- 캐릭터이미지 -->
-                    <img src="./images/dc3.png" alt="공유">
+                    <img src="./images/dc3.png" alt="이동욱">
                     <span>
                         <img src="./images/d03.png" alt="진한이름">
                         <img src="./images/d033.png" alt="흐린이름">
@@ -121,7 +121,7 @@
                 <!-- 캐릭터 이미지박스 -->
                 <div class="ci">
                     <!-- 캐릭터이미지 -->
-                    <img src="./images/dc4.png" alt="공유">
+                    <img src="./images/dc4.png" alt="유인나">
                     <span>
                         <img src="./images/d04.png" alt="진한이름">
                         <img src="./images/d044.png" alt="흐린이름">
@@ -150,22 +150,22 @@
         <div class="blink">
             <ul>
                 <li>
-                    <a href="">법적고지</a>
+                    <a href="#">법적고지</a>
                 </li>
                 <li>
-                    <a href="">영상정보처리기기운영/관리방침</a>
+                    <a href="#">영상정보처리기기운영/관리방침</a>
                 </li>
                 <li>
-                    <a href="">이메일무단수집거부</a>
+                    <a href="#">이메일무단수집거부</a>
                 </li>
                 <li>
-                    <a href="">사이버감사실</a>
+                    <a href="#">사이버감사실</a>
                 </li>
                 <li>
-                    <a href="">찾아오시는길</a>
+                    <a href="#">찾아오시는길</a>
                 </li>
                 <li>
-                    <a href="">개인정보처리방침</a>
+                    <a href="#">개인정보처리방침</a>
                 </li>
             </ul>
         </div>
@@ -173,7 +173,7 @@
         <address class="addr">
             (주)씨제이이엔엠 CJ ENM 대표이사 강호성, 허민호 <br>
             주소 (03926) 서울시 마포구 상암산로 66 사업자 등록번호 106-81-51510 개인정보보호책임자 김재환 <br>
-            © CJ ENM. All Rights Reserved. <br>
+            © CJ ENM. All Rights Reserved. 
         </address>
         <!-- 하단로고 -->
         <div class="blogo">
