--- a/9999muse/index.html
+++ b/9999muse/index.html
@@ -12,30 +12,29 @@
     <header class="top">
         <!-- 로고 -->
         <h1 id="logo">
-            <img src="./images/logo.png" alt="tvn로고">
+            <img src="./images/logo1.png" alt="tvn로고">
         </h1>
         <!-- gnb 메뉴 -->
         <nav class="gnb">
             <ul>
                 <li>
-                    <a href="#">프로그램 소개</a>
+                    <a href="#">GET TICKETS</a>
                 </li>
                 <li>
-                    <a href="#">미리보기</a>
+                    <a href="#">VIDEOS</a>
                 </li>
                 <li>
-                    <a href="#">동영상</a>
+                    <a href="#">SYNOPSIS</a>
                 </li>
                 <li>
-                    <a href="#">사진첩</a>
+                    <a href="#">SIGN UP</a>
                 </li>
                 <li>
-                    <a href="#">OST</a>
+                    <a href="#">PRESS ENQUIRIES</a>
                 </li>
-                <li>
-                    <a href="#">시청자 게시판
-                    </a>
-                </li>
+                <!-- <li>
+                    <a href="#">EXHIBITOR ENQUIRIES</a>
+                </li> -->
             </ul>
         </nav>
 
@@ -92,34 +91,34 @@
                             The Void
                         </li>
                         <li>
-                            Algorithm (Alternate Reality ver.)
+                            Algorithm <br>(Alternate Reality ver.)
                         </li>
                         <li>
-                            he Dark Side (Alternate Reality ver.)
+                            The Dark Side <br>(Alternate Reality ver.)
                         </li>
                         <li>
-                            Pressure (feat. UCLA Bruin Marching Band)
+                            Pressure <br>(feat. UCLA Bruin Marching Band)
                         </li>
                         <li>	
-                            Propaganda (Acoustic ver.)
+                            Propaganda <br>(Acoustic ver.)
                         </li>
                         <li>
-                            Break it to Me (Sam de Jong Remix)
+                            Break it to Me <br>(Sam de Jong Remix)
                         </li>
                         <li>	
-                            Something Human (Acoustic ver.)
+                            Something Human <br>(Acoustic ver.)
                         </li>
                         <li>	
-                            Thought Contagion (Live)
+                            Thought Contagion <br>(Live)
                         </li>
                         <li>
-                            Dig Down (Acoustic Gospel ver.)
+                            Dig Down <br>(Acoustic Gospel ver.)
                         </li>
                         <li>	
-                            The Void (Acoustic ver.)
+                            The Void <br>(Acoustic ver.)
                         </li>
                         <li>	
-                            The Dark Side (Alternate Reality ver.) (inst.)
+                            The Dark Side <br>(Alternate Reality ver.) (inst.)
                         </li>
                     </ol>
                 </div>
@@ -138,15 +137,23 @@
                 <!-- 케릭터설명박스 -->
                 <div class="cd scbar">
                     <!-- 캐릭터 타이틀 -->
-                    <h3>지은탁, 19세</h3>
+                    <h3>The 2nd Law</h3>
                     <!-- 캐릭터 설명 -->
-                    <p>대한민국의 평범한 고3 수험생, 이고 싶지만 그녀의 인생은 태어날 때부터 평범하지 않았다. 어려서부터 다른 사람들 눈엔 보이지 않는 죽은 혼들이 보였고, 때문에 친구들
-                        사이에선 늘 외톨이였다. 엄마 없는 하늘 아래 못된 이모와 이모를 꼭 닮은 이모 자식들의 모진 구박을 견디며 지낸 지 꼬박 십년. 온갖 불행 소스를 다 때려 넣은 잡탕 같은
-                        이 인생이 어이가 없는 와중에, 도깨비를 만났다. 그리고 은탁은 도깨비 신부가 될 운명이란다. </p>
-
-                    <p>미스터리 호러 가난물이었던 인생에 갑자기 판타지라는 이상한 장르가 끼었다. 촛불을 끄면 항상 도깨비가 나타났다. 호기심에 불러냈던 게 습관이 되고, 안 보면 보고 싶고,
-                        도깨비를 기다리는 일은 아직 오지 않은 좋은 미래를 기다리는 것처럼 설렜다. 감정 기복이 심해서 성가실 때도 있지만, 가슴에 검이 꽂힌 채로 살면 그렇게 되겠거니 싶어
-                        봐주기로 한다. 근데 그 검을 나보고 뽑아달란다. 그 말이 꼭 끝내자는 말처럼 아프다.</p>
+                    <ol>
+                        <li>Supremacy</li>
+                        <li>Madness</li>
+                        <li>Panic Station</li>
+                        <li>Prelude</li>
+                        <li>Survival</li>
+                        <li>Follow Me <br>(영화 '월드워 Z' 엔딩곡)</li>
+                        <li>Animals</li>
+                        <li>Explorers</li>
+                        <li>Big Freeze</li>
+                        <li>Save Me</li>
+                        <li>Liquid State</li>
+                        <li>The 2nd Law: Unsustainable</li>
+                        <li>The 2nd Law: Isolated System</li>
+                    </ol>
                 </div>
             </div>
             <div class="cat">
@@ -163,16 +170,25 @@
                 <!-- 케릭터설명박스 -->
                 <div class="cd scbar">
                     <!-- 캐릭터 타이틀 -->
-                    <h3>저승사자, 30대 후반 추정</h3>
+                    <h3>Absolution</h3>
                     <!-- 캐릭터 설명 -->
-                    <p>죽는다는 건, 그와 선약이 생기는 거다. 누구나 그를 보면 놀란다. 처음엔 잘생겨서, 그 다음엔 내가 죽었구나 싶어서. 생의 마지막 순간에 마중 나오면서까지 저렇게 섹시할
-                        필요가 있을까 싶다. 도깨비인 김신과 함께 살면서 하루에 열두 번씩 바뀌는 신의 변덕에 인내심이 한계를 느낄 때마다, 전생에 뭔 큰 죄를 짓긴 지었구나 싶지만 전생에
-                        무엇이었는지, 인간이긴 했는지, 어떻게 저승사자가 됐는지 전혀 모른다. </p>
-
-                    <p>죽음에서 눈을 떠보니 이미 저승사자였다. 저승사자가 되고 나선 날을 세는 것을 잊어버렸다. 그가 세어나가는 것은 무수한 망자들의 혼뿐. </p>
-
-                    <p>그러던 어느 날, 우연히 마주친 한 여자, 써니에 현기증을 느꼈다. 처음 보는 게 분명한데 오래 그리워한 기분이었다. 써니의 예측 불가한 행동들은 상상력을 발휘해야 했고,
-                        그의 서툰 행동들은 하나같이 오답이었다. 이게 다 연애를 드라마로만 배운 탓이다. 그는 헷갈렸다. 이것은 신의 계획일까, 실수일까.</p>
+                    <ol>
+                        <li>Intro</li>
+                        <li>Apocalypse Please</li>
+                        <li>Time Is Running Out</li>
+                        <li>Sing For Absolution</li>
+                        <li>Stockholm Syndrome</li>
+                        <li>Falling Away With You</li>
+                        <li>Interlude</li>
+                        <li>Hysteria</li>
+                        <li>Blackout</li>
+                        <li>Butterflies & Hurricanes</li>
+                        <li>The Small Print</li>
+                        <li>Endlessly</li>
+                        <li>Thoughts Of A Dying Atheist</li>
+                        <li>Rule By Secrecy</li>
+                        <li>Fury</li>
+                    </ol>
                 </div>
             </div>
             <div class="cat">
@@ -189,15 +205,22 @@
                 <!-- 케릭터설명박스 -->
                 <div class="cd scbar">
                     <!-- 캐릭터 타이틀 -->
-                    <h3>써니, 20대 중후반
-                    </h3>
+                    <h3>Black Holes and Revelations</h3>
                     <!-- 캐릭터 설명 -->
-                    <p>혈혈단신 천애고아. 철없이 사는 여자가 세상 살기 가장 편하다는 걸 일찍부터 깨달았다. 남자의 외모는 내면으로 들어가는 창이고, 김중배의 다이아몬드는 잡는 게 당연한 거고,
-                        진정한 사랑은 통장 잔고에서 느껴진다. 누군가의 첫사랑이 되는 게 세상에서 제일 쉬웠던 써니의 나이 곧 서른이었다. </p>
-
-                    <p>그 남자, 저승사자를 처음 만난 건 갖고 싶은 반지를 발견했을 때였다. 그는 그녀에게 양보하지 않은 최초의 남자였다. 첫눈에 반했다고 넘겨짚기엔 너무, 슬픈 눈이었다. 시계며
-                        차림새만 대충 훑어도 연봉 1억에 딱 봐도 연애 못해본 모태솔로인 줄만 알았는데, 만날수록 이상한 남자다. 두문불출하기 일쑤고 직업, 나이, 과거사 그 무엇도 알려주지
-                        않는다. 처음엔 그저 잘생긴 호구로 생각했는데, 그 슬펐던 눈이 자꾸 눈에 밟힌다. 동정은 특기가 아닌데도.</p>
+                    <ol>
+                        <li>Take a Bow</li>
+                        <li>Starlight</li>
+                        <li>Supermassive Black Hole <br>(Album Version)</li>
+                        <li>Map Of The Problematique</li>
+                        <li>Soldier's Poem</li>
+                        <li>Invincible/li>
+                        <li>Assassin</li>
+                        <li>Exo-Politics</li>
+                        <li>City Of Delusion</li>
+                        <li>Hoodoo</li>
+                        <li>Knights Of Cydonia</li>
+                        <li>Glorious</li>
+                    </ol>
                 </div>
             </div>
             <!-- <div style="clear: both;"></div> -->
@@ -209,35 +232,35 @@
         <div class="blink">
             <ul>
                 <li>
-                    <a href="#">법적고지</a>
+                    <a href="#">TRAFALGAR RELEASING</a>
                 </li>
                 <li>
-                    <a href="#">영상정보처리기기운영/관리방침</a>
+                    <a href="#">PRIVACY AND COOKIES POLICY</a>
                 </li>
                 <li>
-                    <a href="#">이메일무단수집거부</a>
+                    <a href="#">TERMS OF USE</a>
                 </li>
                 <li>
-                    <a href="#">사이버감사실</a>
+                    <a href="#">ACCEPTABLE USE POLICY</a>
                 </li>
-                <li>
+                <!-- <li>
                     <a href="#">찾아오시는길</a>
-                </li>
-                <li>
+                </li> -->
+                <!-- <li>
                     <a href="#">개인정보처리방침</a>
-                </li>
+                </li> -->
             </ul>
         </div>
         <!-- 회사주소 -->
         <address class="addr">
-            (주)씨제이이엔엠 CJ ENM 대표이사 강호성, 허민호 <br>
-            주소 (03926) 서울시 마포구 상암산로 66 사업자 등록번호 106-81-51510 개인정보보호책임자 김재환 <br>
-            © CJ ENM. All Rights Reserved. 
+            <p>MOVIE PLATFORM © 2018 POWSTER <br></p>
+            <p>© 2018 TRAFALGAR RELEASING. ALL RIGHTS RESERVED.</p>
+             
         </address>
         <!-- 하단로고 -->
-        <div class="blogo">
+        <!-- <div class="blogo">
             <img src="images/blogo.png" alt="하단로고">
-        </div>
+        </div> -->
 
     </footer>
 </body>
