--- a/001.HTML 학습/04.Robot_PJ/01.static.html
+++ b/001.HTML 학습/04.Robot_PJ/01.static.html
@@ -13,7 +13,7 @@
             /* 글자가로중앙 */
             font-size: 24px;
             font-weight: bold;
-            line-height: 100;
+            line-height: 100px;
             /* 높이값과 같은 줄간격은 글자세로중앙 */
         }
 
@@ -41,7 +41,7 @@
             left: 100px;
             /* 위치이동속성은 static에는 적용되지 않는다! */
             /* 마진으로 이동하기 */
-            margin-top: 100;
+            margin-top: 100px;
             margin-left: 100px;
         }
         
@@ -53,9 +53,9 @@
 <div class="bx" id="s3">s3</div>
     <!-- 
         젠코딩
-        .bx#s$*3
+        .bx#s${s$}*3
         div인데 클래스가 bx,
-        아이디가 s1,s2,s3 연속
+        아이디가 s1,s2,s3 연속 증가번호로 생성하기
         $(달러)는 연속번호가 들어가는 위치임!
         중괄호({})는 데이터에 들어갈 내용임!
      -->
