--- a/001.HTML 학습/04.Robot_PJ/02.relative.html.html
+++ b/001.HTML 학습/04.Robot_PJ/02.relative.html.html
@@ -13,7 +13,7 @@
             /* 글자가로중앙 */
             font-size: 24px;
             font-weight: bold;
-            line-height: 100;
+            line-height: 100px;
             /* 높이값과 같은 줄간격은 글자세로중앙 */
             background-color: #fff;
         }
@@ -82,13 +82,16 @@
 
 
                 */
+                top: 50px;
+                left: 50px;
+                z-index: 1;
                 color: #fff;
-                background: url(./ab_img/ab5.jpg) no-repeat center;
+                background: url(./ab_img/ab5.jpg) no-repeat center/cover;
             }
 
             #r2{
                 color: #fff;
-                background: url(./ab_img/ab5.jpg) no-repeat center;
+                background: url(./ab_img/ab5.jpg) no-repeat center/cover;
                 position: relative;
                 bottom: 75px;
                 right: -86px;
