--- a/001.HTML 학습/04.Robot_PJ/03.asolute.html
+++ b/001.HTML 학습/04.Robot_PJ/03.asolute.html
@@ -18,15 +18,15 @@
             /* 글자가로중앙 */
             font-size: 24px;
             font-weight: bold;
-            line-height: 100;
+            line-height: 100px;
             /* 높이값과 같은 줄간격은 글자세로중앙 */
-            background-color: #fff;
+            background-color: #ff0;
         }
 
         #a1 {
             position: absolute;
             color: #fff;
-            background: url(./ab_img/ab1.jpg) no-repeat;
+            background: url(./ab_img/ab1.jpg) no-repeat center/cover;
             /* 
             [3. absolute 포지션]
             1)absolute 포지션은 위치이동값을
