--- a/001.HTML 학습/04.Robot_PJ/02.relative.html.html
+++ b/001.HTML 학습/04.Robot_PJ/02.relative.html.html
@@ -58,7 +58,13 @@
                 
                 (3)z-index 속성으로 숫자가 크면 위!
 
-                9)
+                9)자식요소에 대한 다음의 중요한 특징이 있다!
+                -자식요소(혹은 자손요소)의 포지션이
+                앱솔루트일때 자기자신에게 아무런 포지션이 없는
+                상태라면 ...... 자기가 부모역활을 해야할때
+                설정하는 포지션으로 relative가 많이 사용된다!
+                (이유:relative를 주고 나면 아무런 기존의 디자인의 
+                변화가 없기 때문이다!)
 
 -----------------------------------------------------------------------------------------------------
                 [z-index란?]
