--- a/03.DKB_PJ/index.html
+++ b/03.DKB_PJ/index.html
@@ -3,8 +3,44 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>쓸쓸하고 찬란하신(神) 도깨비</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/media.css">
+    <!-- JS코딩구역 -->
+    <script>
+        //자바스크립트 코딩구역은 JS문법만 사용가능!
+        //js코드공간 - 함수 >>>  function (예약어:키워드)
+        //함수형식: function 함수명(){코드}
+        function 보여줘(){
+            //alert("나야나!");
+            //변경대상선정: .gnb, .ham
+            //변경내용:각 대상에 클래스 on넣기/on빼기!
+
+            //클래스 넣는 객체 : classlist
+            //클래스 넣기 매서드 classlist.add(클래스명)
+            //클래스 빼기 매서드 classlist.remove(클래스명)
+            //클래스 토글 매서드 classlist.toggle(클래스명)
+            //토글이란? 두가지 기능을 전환하는 것!
+            //여기서 토글은 지정 클래스가 없으면 넣고 있으면 뺀다!
+
+            //JS 에서 현재 웹문서 전체란? document\
+            //getElementsByClassName(클래스명) - 클래스요소 선택
+            //item(번호) - 클래스 중 몇번째 (첫번째는 0번)
+
+            //GNB 요소
+            document.getElementsByClassName("gnb").item(0)
+            .classlist.toggle("on");
+
+            //햄버거 버튼요소
+            document.getElementsByClassName("ham").item(0)
+            .classlist.toggle("on");
+
+        }//////보여줘 함수 ///////
+
+        //이벤트가 발생하는 곳에서 햠수를 호출할때는
+        //  >>> 함수면()
+    </script>
 </head>
 
 <body class="scbar">
@@ -77,6 +113,15 @@
                 </li>
             </ul>
         </nav>
+        <!-- 모바일용 햄버거버튼 -->
+        <button class="ham" onclick="보여줘()"></button>
+            <!-- 
+                on이벤트명 -> html 이벤트 속성
+                onclick ="값"
+                ->클릭이벤트가 발생하면 값을 읽는다!(실행한다!)
+                ->값은 JS문법으로 표현되는 코드!
+             -->
+        
 
     </header>
     <!-- 2.메인영역 -->
