--- a/03.DKB_PJ/index.html
+++ b/03.DKB_PJ/index.html
@@ -13,7 +13,7 @@
         //js코드공간 - 함수 >>>  function (예약어:키워드)
         //함수형식: function 함수명(){코드}
         function 보여줘(){
-            alert("나야나!");
+            // alert("나야나!");
             //변경대상선정: .gnb, .ham
             //변경내용:각 대상에 클래스 on넣기/on빼기!
 
