로봇 애니메이션 적용하기

--- a/001.HTML 학습/04.Robot_PJ/robot.html
+++ b/001.HTML 학습/04.Robot_PJ/robot.html
@@ -7,6 +7,19 @@
     <title>Robot PJ</title>
 </head>
 <body>
+    <!-- 로봇페이지 로고 -->
+    <div id="logo">
+        R2D2
+    </div>
+
+    <!-- 내용보기 링크 타이틀 -->
+    <h2 class="link">
+        <a href="#dcbx">what is Robot?</a>
+        <!-- href 속성값으로 본 페이지의 아이디명을 샵(#)뒤에 쓰면 위치이동함 -->
+    </h2>
+    <!-- 위로이동버튼 -->
+    <a href="#" class="btnTop">TOP</a>
+
     <!-- 로봇머리 -->
     <div id="head">
         <!-- 눈1 -->
