--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <h2>공통 프로젝트</h2>
                 <ul>
                     <li>
-                        <a href="001.HTML 학습/01.Info_PJ/info.html" target="_blank">
+                        <a href="001.HTML 학습/03.DKB_PJ/index.html" target="_blank">
                             기본전달사항
                     </li>
                     <li>
