--- a/index.html
+++ b/index.html
@@ -79,15 +79,20 @@
                 <ul>
                     <li>
                         <a href="001.HTML 학습/03.DKB_PJ/index.html" target="_blank">
-                            기본전달사항
-                    </li>
-                    <li>
-                        <a href="001.HTML 학습/01.Info_PJ/info.html" target="_blank">
-                            포폴괂리페이지
-                    </li>
-                    <li>
-                        <a href="001.HTML 학습/01.Info_PJ/info.html" target="_blank">
                             도깨비
+                    </li>
+                    <li>
+                        <a href="001.HTML 학습/04.Robot_PJ/robot.html" target="_blank">
+                            로봇
+                    </li>
+                    <li>
+                        <a href="001.HTML 학습/04.Robot_PJ/avengers.html" target="_blank">
+                            어벤져스
+                        </a>
+                    </li>
+                    <li>
+                        <a href="001.HTML 학습/07.CGV_PJ/003.site/index.html" target="_blank">
+                            CGV_PJ
                         </a>
                     </li>
                 </ul>
