--- a/001.HTML 학습/07.CGV_PJ/003.site/index.html
+++ b/001.HTML 학습/07.CGV_PJ/003.site/index.html
@@ -32,6 +32,110 @@
         <!-- 1-1. 페이지 타이틀 -->
         <h1 class="tit">CGV 예고편 상영관</h1>
         <!-- 1-2. 전체메뉴(GNB) -->
+        <nav class="gnb">
+            <ul class="glist">
+                <li>
+                    <a href="#">영화</a>
+                    <!-- 서브메뉴 -->
+                    <div class="smenu">
+                        <ol>
+                            <li>
+                                <a href="#">
+                                    무비차트
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    HD 트레일러
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    무비파인더
+                                </a>
+                            </li>
+                            <li class="bdt">
+                                <a href="#" >
+                                    CGV아트하우스
+                                </a>
+                            </li>
+                        </ol>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">예매</a>
+                    <!-- 서브메뉴 -->
+                    <div class="smenu">
+                        <ol>
+                            <li>
+                                <a href="#">
+                                    빠른예매
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    상영시간표
+                                </a>
+                            </li>
+                        </ol>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">극장</a>
+                    <!-- 서브메뉴 -->
+                    <div class="smenu">
+                        <ol>
+                            <li>
+                                <a href="#">
+                                    CGV 극장
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    특별관
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    CLUB 서비스
+                                </a>
+                            </li>
+                        </ol>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">이벤트&amp;컬처</a>
+                    <!-- 서브메뉴 -->
+                    <div class="smenu">
+                        <ol>
+                            <li>
+                                <a href="#">
+                                    이벤트
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    기프트샵
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    매거진
+                                </a>
+                            </li>
+                        </ol>
+                    </div>
+                </li>
+            </ul>
+            <!-- 영사기박스 -->
+            <!-- aside는 서브내용을 담는 div와 같은요소 -->
+            <aside id="cam">
+            <!-- 영사기 이미지 -->
+            <img src="./images/gnb.png" alt="영사기">
+            <!-- 빔표시박스 -->
+            <div class="bim"></div>
+        </aside>
+        </nav>
     </header>
     <!-- 2.메인영역 -->
     <main id="cont" class="part rbx">
@@ -147,6 +251,24 @@
                 개인정보보호 책임자 : 정종민대표이메일 : cjcgvmaster@cj.netCGV고객센터 : 1544-1122 <br>
             </span>
         </address>
+        <!-- 3-2.sns박스 -->
+        <ul class="sns">
+            <li>
+                <a href="https://www.facebook.com/CJCGV" target="_blank" title="페이스북바로가기">
+                    <span class="ir">페이스북바로가기</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/cj_cgv" target="_blank" title="트위터바로가기">
+                    <span class="ir">트위터바로가기</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/accounts/login/" target="_blank" title="인스타그램바로가기">
+                    <span class="ir">인스타그램바로가기</span>
+                </a>
+            </li>
+        </ul>
     </footer>
 </body>
 
