--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
 
         body{
-            background: url(./imgs/worksbg.jpg) no-repeat center/cover;
+            background: url(./imgs/worksbg.jpg) no-repeat fixed center/cover;
             overflow-x: hidden;   
             
             /* 첫번째 자식블록요소 마진탑포함 */
@@ -52,7 +52,7 @@
             /* 자식 블록요소를 옆으로 흐르게함! */
         }
         .pbx>div{
-            flex: 1;
+            display: flex;
             /* 부모가 flex인 자식을 등분할시 설정값은1 */
         }
 
