--- a/001.HTML 학습/07.CGV_PJ/003.site/intro.html
+++ b/001.HTML 학습/07.CGV_PJ/003.site/intro.html
@@ -17,7 +17,7 @@
     <h1 id="enter">
         <a href="index.htnml">
             <img src="images/logo_cgv.png" alt="CGV로고">
-            <span></span>
+            <span>Click Hear</span>
         </a>
     </h1>
 
