cgv 미디어쿼리

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="001.HTML 학습/07.CGV_PJ/003.site/index.html" target="_blank">
+                        <a href="001.HTML 학습/07.CGV_PJ/003.site/intro.html" target="_blank">
                             CGV_PJ
                         </a>
                     </li>
