--- a/003.JS학습/js001.html
+++ b/003.JS학습/js001.html
@@ -354,7 +354,7 @@
         // 3.변경내용:트랜지션으로 화면 중앙으로 이동하기!
         멍청이.item(헐).style.transition = "1s ease-out";
         멍청이.item(헐).style.top = "50%";
-        멍청이.item(헐).style.left = "50%";
+        멍청이.item(헐).style.right = "50%";/* 처음에 right이니까! */
         멍청이.item(헐).style.transform = "translate(50%,-50%)";
         /* 오늘쪽에서 50%를 밀어서 x축이동은 +50%임! */
 
